# major

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  final_test.py  generate_and_send_emails.py  init_database.py  langgraph.json  main.py  pyproject.toml  requirements.txt  send_test_reminder_emails.py  test_ai_responder.py  test_calendar.py  test_meeting.py  test_reminders.py  test_response.py
core/: ai_responder.py  auth.py  calendar_manager.py  config_loader.py  data_models.py  database.py  email_Summary_test.py  email_classifier.py  email_rewriter.py  email_service.py  helpers.py  run_refresh_token.py  token_gen.py  workflow_manager.py
data/: emails.db
scripts/: authenticate_email.py  schedule_jobs.py  test_single_run.py
tests/: test_email_rewriter.py  test_mail.py
ui/: app.py
ui/static/: styles.css
ui/templates/: dashboard.html  email_actions.html  email_reminder.html  email_respond.html  email_schedule.html  emails.html  index.html  rewrite.html  send.html  settings.html
